Add eslint cache to CI, delete /dist before `yarn dev` runs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,14 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
+      - name: Cache eslint
+        uses: actions/cache@v1
+        with:
+          path: "**/.eslintcache"
+          key: ${{ runner.os }}-eslint-${{ hashFiles('**/.eslintcache') }}
+          restore-keys: |
+            ${{ runner.os }}-eslint-
+
       - name: install dependencies
         run: |
           yarn
