--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,7 @@ on:
     paths:
       - "packages/front-end/**"
       - "packages/back-end/**"
+      - "packages/stats/**"
       - "!**.md"
       - "yarn.lock"
       - "Dockerfile"
@@ -20,6 +21,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      # Ensures `yarn install` only runs when dependencies change (saves ~2 minutes)
+      - name: Cache Docker Layers
+        uses: satackey/action-docker-layer-caching@v0.0.11
+        continue-on-error: true
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
