Added MS SQL support (#576)
* Added MS SQL support, and added to the docs.

--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -45,6 +45,7 @@
     "md5": "^2.3.0",
     "mongodb": "^3.7.3",
     "mongoose": "^5.13.13",
+    "mssql": "^9.0.1",
     "mysql2": "^2.3.0",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.6.0",
@@ -80,6 +81,7 @@
     "@types/jsonwebtoken": "^8.5.1",
     "@types/lodash": "^4.14.157",
     "@types/md5": "^2.2.0",
+    "@types/mssql": "^8.1.1",
     "@types/node": "^14.0.5",
     "@types/node-fetch": "^2.5.8",
     "@types/nodemailer": "^6.4.1",
