--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -73,14 +73,15 @@
     "@swc/core": "^1.3.4",
     "@swc/jest": "^0.2.23",
     "@types/async": "^3.0.2",
-    "@types/body-parser": "^1.17.1",
+    "@types/body-parser": "^1.19.2",
     "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/crypto-js": "^3.1.47",
     "@types/errorhandler": "^0.0.32",
-    "@types/express": "^4.17.1",
+    "@types/express": "^4.17.14",
     "@types/express-jwt": "^0.0.42",
+    "@types/express-serve-static-core": "^4.17.31",
     "@types/jest": "^27.0.1",
     "@types/js-yaml": "^4.0.2",
     "@types/jsonwebtoken": "^8.5.1",
