REST API - list features endpoint
- [x] Middleware to authenticate via Secret API keys
- [x] createApiRequestHandler helper function
- [ ] listFeatures request handler function
- [ ] catchAll api route with 404 response
- [ ] rate limiting?
- [ ] track API key usage?
- [ ] testing

--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -66,7 +66,8 @@
     "sql-formatter": "^4.0.2",
     "string-env-interpolation": "^1.0.1",
     "stripe": "^9.14.0",
-    "uniqid": "^5.3.0"
+    "uniqid": "^5.3.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.57",
