--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -41,6 +41,7 @@
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "express-jwt": "^6.0.0",
+    "express-rate-limit": "^6.6.0",
     "googleapis": "^59.0.0",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
