--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -9,7 +9,7 @@
     "build:emails": "mkdir -p dist/templates && cp -r src/templates/* dist/templates",
     "build:clean": "rm -rf dist",
     "build:typescript": "tsc",
-    "dev": "yarn build:clean && concurrently \"yarn watch-compile\" \"yarn watch-dev\"",
+    "dev": "yarn build:clean && concurrently \"yarn watch-compile\" \"yarn watch-dev | yarn pino-pretty\"",
     "build": "yarn build:clean && yarn build:typescript && yarn build:emails",
     "start": "node dist/server.js",
     "test": "jest --forceExit --verbose --detectOpenHandles",
@@ -58,8 +58,7 @@
     "nunjucks": "^3.2.3",
     "openid-client": "^5.1.9",
     "pg": "^8.6.0",
-    "pino-http": "^5.3.0",
-    "pino-pretty": "^5.1.0",
+    "pino-http": "^8.2.1",
     "presto-client": "^0.11.2",
     "python-shell": "^3.0.0",
     "saslprep": "^1.0.0",
@@ -95,7 +94,6 @@
     "@types/nodemailer": "^6.4.1",
     "@types/nunjucks": "^3.1.4",
     "@types/pg": "^7.14.4",
-    "@types/pino-http": "^5.0.5",
     "@types/request": "^2.48.3",
     "@types/request-promise": "^4.1.44",
     "@types/sql-formatter": "^2.3.0",
@@ -105,6 +103,7 @@
     "jest": "^27.1.1",
     "nodemon": "^2.0.20",
     "objects-to-csv": "^1.3.6",
+    "pino-pretty": "^9.1.1",
     "ts-node": "^10.9.1",
     "typescript": "4.7.4"
   },
