--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -9,7 +9,7 @@
     "build:emails": "mkdir -p dist/templates && cp -r src/templates/* dist/templates",
     "build:clean": "rm -rf dist",
     "build:typescript": "tsc",
-    "dev": "yarn build:clean && concurrently \"yarn watch-compile\" \"yarn watch-dev\"",
+    "dev": "yarn build:clean && concurrently \"yarn watch-compile\" \"yarn watch-dev | yarn pino-pretty\"",
     "build": "yarn build:clean && yarn build:typescript && yarn build:emails",
     "start": "node dist/server.js",
     "test": "jest --forceExit --verbose --detectOpenHandles",
@@ -41,6 +41,7 @@
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "express-jwt": "^6.0.0",
+    "express-rate-limit": "^6.6.0",
     "googleapis": "^59.0.0",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
@@ -57,8 +58,7 @@
     "nunjucks": "^3.2.3",
     "openid-client": "^5.1.9",
     "pg": "^8.6.0",
-    "pino-http": "^5.3.0",
-    "pino-pretty": "^5.1.0",
+    "pino-http": "^8.2.1",
     "presto-client": "^0.11.2",
     "python-shell": "^3.0.0",
     "saslprep": "^1.0.0",
@@ -66,7 +66,8 @@
     "sql-formatter": "^4.0.2",
     "string-env-interpolation": "^1.0.1",
     "stripe": "^9.14.0",
-    "uniqid": "^5.3.0"
+    "uniqid": "^5.3.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.57",
@@ -93,7 +94,6 @@
     "@types/nodemailer": "^6.4.1",
     "@types/nunjucks": "^3.1.4",
     "@types/pg": "^7.14.4",
-    "@types/pino-http": "^5.0.5",
     "@types/request": "^2.48.3",
     "@types/request-promise": "^4.1.44",
     "@types/sql-formatter": "^2.3.0",
@@ -103,6 +103,7 @@
     "jest": "^27.1.1",
     "nodemon": "^2.0.20",
     "objects-to-csv": "^1.3.6",
+    "pino-pretty": "^9.1.1",
     "ts-node": "^10.9.1",
     "typescript": "4.7.4"
   },
