--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "type-check": "tsc --pretty --noEmit"
+    "type-check": "tsc --pretty --noEmit",
+    "test": "jest --forceExit --verbose --detectOpenHandles"
   },
   "dependencies": {
     "@dnd-kit/core": "^4.0.3",
@@ -67,6 +68,9 @@
     "uniqid": "^5.3.0"
   },
   "devDependencies": {
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.3.4",
+    "@swc/jest": "^0.2.23",
     "@types/diff": "^5.0.1",
     "@types/lodash": "^4.14.155",
     "@types/markdown-it": "^10.0.2",
@@ -81,6 +85,8 @@
     "@types/react-syntax-highlighter": "^15.5.4",
     "@types/react-textarea-autosize": "^8.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.1.1",
     "sass": "^1.26.5",
     "typescript": "4.7.4"
   },
