Changes from code review:
- Changed language from "private key" to "encryption key" throughout to avoid confusion with the REST api
- Fixed typo `encrpytion`
- On the SDKEndpoints component, hide the encryption column unless at least one key is encrypted
- In the ApiKeysModal, moved the tooltip to an alert div and add a link to the docs
- Updated copy in the JS and React docs
- Added a new section to the API docs for when encryption is enabled

--- a/package.json
+++ b/package.json
@@ -49,5 +49,15 @@
       "flake8 --config=packages/stats/.flake8"
     ]
   },
+  "prettier": {
+    "overrides": [
+      {
+        "files": "**/*.mdx",
+        "options": {
+          "embeddedLanguageFormatting": "off"
+        }
+      }
+    ]
+  },
   "license": "MIT"
 }
