--- a/docs/package.json
+++ b/docs/package.json
@@ -13,8 +13,7 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc",
-    "type-check": "tsc"
+    "typecheck": "tsc"
   },
   "dependencies": {
     "@docusaurus/core": "2.1.0",
