Trigger on pull_request, not push

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,5 @@
 name: CI
-
-# Runs on every push to every branch
-on:
-  push:
-    branches:
-      - "**"
+on: [pull_request]
 
 jobs:
   # Linting, type-checking, and tests
