--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,8 +1,12 @@
 name: Deploy Docs
 on:
+  pull_request:
+    paths:
+      - "docs/**"
+      - ".github/workflows/docs.yml"
   push:
     branches:
-      - "**"
+      - "main"
     paths:
       - "docs/**"
       - ".github/workflows/docs.yml"
