--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,15 +1,13 @@
-name: Deploy Docs
+name: Docs
 on:
   pull_request:
     paths:
       - "docs/**"
-      - ".github/workflows/docs.yml"
   push:
     branches:
       - "main"
     paths:
       - "docs/**"
-      - ".github/workflows/docs.yml"
 jobs:
   vercel:
     runs-on: ubuntu-latest
@@ -37,3 +35,22 @@ jobs:
           vercel-org-id: ${{ secrets.VERCEL_DOCS_ORG_ID}}
           vercel-project-id: ${{ secrets.VERCEL_DOCS_PROJECT_ID}} 
           working-directory: ./
+
+  # Linting, type-checking, and tests
+  ci:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+          cache: 'yarn'
+      
+      - name: Install dependencies and type-check
+        run: |
+          cd docs
+          yarn
+          yarn typecheck
