--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "type-check": "tsc --pretty --noEmit",
-    "test": "jest --forceExit --verbose --detectOpenHandles"
+    "test": "jest --forceExit --verbose --detectOpenHandles",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@dnd-kit/core": "^4.0.3",
@@ -68,6 +70,15 @@
     "uniqid": "^5.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.6",
+    "@storybook/addon-actions": "^6.5.13",
+    "@storybook/addon-essentials": "^6.5.13",
+    "@storybook/addon-interactions": "^6.5.13",
+    "@storybook/addon-links": "^6.5.13",
+    "@storybook/builder-webpack5": "^6.5.13",
+    "@storybook/manager-webpack5": "^6.5.13",
+    "@storybook/react": "^6.5.13",
+    "@storybook/testing-library": "^0.0.13",
     "@swc/cli": "^0.1.57",
     "@swc/core": "^1.3.4",
     "@swc/jest": "^0.2.23",
@@ -84,6 +95,7 @@
     "@types/react-redux": "^7.1.24",
     "@types/react-syntax-highlighter": "^15.5.4",
     "@types/react-textarea-autosize": "^8.0.0",
+    "babel-loader": "^8.2.5",
     "eslint-plugin-react-hooks": "^4.6.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.1.1",
