--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -99,13 +99,15 @@
     "@types/sql-formatter": "^2.3.0",
     "@types/uniqid": "^5.2.0",
     "chokidar": "^3.5.3",
-    "concurrently": "^7.4.0",
     "jest": "^27.1.1",
-    "nodemon": "^2.0.20",
-    "objects-to-csv": "^1.3.6",
-    "pino-pretty": "^9.1.1",
-    "ts-node": "^10.9.1",
     "typescript": "4.7.4"
+  },
+  "optionalDependencies": {
+    "pino-pretty": "^9.1.1",
+    "objects-to-csv": "^1.3.6",
+    "ts-node": "^10.9.1",
+    "concurrently": "^7.4.0",
+    "nodemon": "^2.0.20"
   },
   "license": "MIT"
 }
