--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -70,16 +70,6 @@
     "uniqid": "^5.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.6",
-    "@storybook/addon-actions": "^6.5.13",
-    "@storybook/addon-essentials": "^6.5.13",
-    "@storybook/addon-interactions": "^6.5.13",
-    "@storybook/addon-knobs": "^6.4.0",
-    "@storybook/addon-links": "^6.5.13",
-    "@storybook/builder-webpack5": "^6.5.13",
-    "@storybook/manager-webpack5": "^6.5.13",
-    "@storybook/react": "^6.5.13",
-    "@storybook/testing-library": "^0.0.13",
     "@swc/cli": "^0.1.57",
     "@swc/core": "^1.3.4",
     "@swc/jest": "^0.2.23",
@@ -100,8 +90,20 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.1.1",
     "sass": "^1.55.0",
-    "storybook-addon-next": "^1.6.9",
     "typescript": "4.7.4"
+  },
+  "optionalDependencies": {
+    "@babel/core": "^7.19.6",
+    "@storybook/addon-actions": "^6.5.13",
+    "@storybook/addon-essentials": "^6.5.13",
+    "@storybook/addon-interactions": "^6.5.13",
+    "@storybook/addon-knobs": "^6.4.0",
+    "@storybook/addon-links": "^6.5.13",
+    "@storybook/builder-webpack5": "^6.5.13",
+    "@storybook/manager-webpack5": "^6.5.13",
+    "@storybook/react": "^6.5.13",
+    "@storybook/testing-library": "^0.0.13",
+    "storybook-addon-next": "^1.6.9"
   },
   "license": "MIT"
 }
