--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Install dependencies
         run: |
           # Main app
-          yarn install --ignore-optional
+          yarn install
 
           # Stats engine
           pip install numpy scipy pandas pytest black flake8 nbformat gbstats
