--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -67,7 +67,8 @@
     "string-env-interpolation": "^1.0.1",
     "stripe": "^9.14.0",
     "uniqid": "^5.3.0",
-    "zod": "^3.19.1"
+    "zod": "^3.19.1",
+    "@growthbook/growthbook": "^0.19.1"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.57",
