--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@google-cloud/bigquery": "5",
     "@google-cloud/storage": "^5.20.5",
+    "@growthbook/growthbook": "^0.20.0",
     "@sentry/node": "^7.14.2",
     "@slack/web-api": "^5.14.0",
     "agenda": "^4.3.0",
@@ -67,8 +68,7 @@
     "string-env-interpolation": "^1.0.1",
     "stripe": "^9.14.0",
     "uniqid": "^5.3.0",
-    "zod": "^3.19.1",
-    "@growthbook/growthbook": "^0.19.0"
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.57",
