--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@google-cloud/bigquery": "5",
     "@google-cloud/storage": "^5.20.5",
+    "@growthbook/growthbook": "^0.20.0",
     "@sentry/node": "^7.14.2",
     "@slack/web-api": "^5.14.0",
     "agenda": "^4.3.0",
