--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "pretty": "prettier --write ./**/*.{json,css,scss,md,mdx}",
     "type-check": "wsrun -m type-check",
     "test": "wsrun -m test",
-    "dev": ". $(cd packages/stats && poetry env info --path)/bin/activate && wsrun -p '*-end' -m dev",
-    "build": "wsrun -p '*-end' -m build",
-    "start": "wsrun -p '*-end' -m start",
-    "setup": "wsrun -p '@growthbook/growthbook' -c build && wsrun -p '@growthbook/growthbook-react' -c build && wsrun -p 'stats' -c setup",
+    "dev": ". $(cd packages/stats && poetry env info --path)/bin/activate && wsrun -p front-end -p back-end -m dev",
+    "build": "yarn build:enterprise && yarn build:app",
+    "build:sdks": "wsrun -p '@growthbook/growthbook' -c build && wsrun -p '@growthbook/growthbook-react' -c build",
+    "build:enterprise": "yarn workspace enterprise build",
+    "build:app": "wsrun -p front-end -p back-end -m build",
+    "start": "wsrun -p front-end -p back-end -m start",
+    "setup": "yarn build:sdks && yarn build:enterprise && yarn setup:stats",
+    "setup:stats": "wsrun -p 'stats' -c setup",
     "prepare": "husky install",
     "migrate-encryption-key": "yarn workspace back-end migrate-encryption-key",
     "ci": "yarn lint && yarn run type-check && yarn run test"
