--- a/packages/back-end/tsconfig.json
+++ b/packages/back-end/tsconfig.json
@@ -11,6 +11,7 @@
     "typeRoots": ["node_modules/@types", "./typings"],
     "strictNullChecks": true,
     "strictBindCallApply": true,
+    "strictPropertyInitialization": true,
     "incremental": true
   },
   "include": ["src/**/*", "types/**/*.d.ts", "typings/**/*.d.ts"]
