--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -12,6 +12,7 @@
     "dev": "yarn build:clean && concurrently \"yarn watch-compile\" \"yarn watch-dev | yarn pino-pretty\"",
     "build": "yarn build:clean && yarn build:typescript && yarn build:emails",
     "start": "node dist/server.js",
+    "repl": "node --require ts-node/register/transpile-only --experimental-repl-await repl",
     "test": "jest --forceExit --verbose --detectOpenHandles",
     "type-check": "tsc --pretty --noEmit",
     "generate-dummy-data": "ts-node --swc ./test/data-generator/new-generator.ts",
@@ -25,7 +26,7 @@
     "@growthbook/growthbook": "^0.20.0",
     "@sentry/node": "^7.14.2",
     "@slack/web-api": "^5.14.0",
-    "agenda": "^4.3.0",
+    "agenda": "^5.0.0",
     "asn1.js": "^5.4.1",
     "async": "^3.1.0",
     "aws-sdk": "^2.696.0",
