console.log feedback

--- a/.eslintrc
+++ b/.eslintrc
@@ -153,6 +153,7 @@
         "./packages/sdk-js/**/*",
         "./packages/front-end/**/*",
         "./packages/back-end/test/**/*",
+        "./packages/back-end/src/scripts/**/*",
         "./packages/back-end/**/*.test.{ts,tsx,js,jsx}"
       ]
     }
