--- a/.eslintrc
+++ b/.eslintrc
@@ -74,6 +74,9 @@
         "argsIgnorePattern": "^_"
       }
     ],
+    "no-console": [
+      "warn"
+    ],
     "react/react-in-jsx-scope": "off",
     "react/prop-types": "off",
     "react-hooks/rules-of-hooks": "error",
@@ -141,6 +144,18 @@
       "rules": {
         "react-hooks/exhaustive-deps": "off"
       }
+    },
+    {
+      "rules": {
+        "no-console": "off"
+      },
+      "files": [
+        "./packages/sdk-js/**/*",
+        "./packages/front-end/**/*",
+        "./packages/back-end/test/**/*",
+        "./packages/back-end/src/scripts/**/*",
+        "./packages/back-end/**/*.test.{ts,tsx,js,jsx}"
+      ]
     }
   ]
 }
