--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -35,6 +35,7 @@
     "clsx": "^1.1.1",
     "cronstrue": "^1.122.0",
     "date-fns": "^2.15.0",
+    "date-fns-tz": "^1.3.7",
     "diff": "^5.0.0",
     "diff2html": "^3.4.11",
     "dirty-json": "^0.9.2",
