--- a/packages/stats/pyproject.toml
+++ b/packages/stats/pyproject.toml
@@ -34,11 +34,11 @@ tox = "^3.20.1"
 virtualenv = "^20.2.2"
 twine = "^3.3.0"
 toml = "^0.10.2"
-black = "20.8b1"
+black = "22.3.0"
 isort = "5.6.4"
 flake8 = "3.8.4"
 flake8-docstrings = "^1.6.0"
-pytest = "6.1.2"
+pytest = "6.2.5"
 pytest-cov = "2.10.1"
 
 [build-system]
