--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "build:emails": "mkdir -p dist/templates && cp -r src/templates/* dist/templates",
-    "build:clean": "rm -rf dist",
+    "build:clean": "rimraf -rf dist",
     "build:typescript": "tsc",
     "dev": "yarn build:clean && concurrently \"yarn watch-compile\" \"yarn watch-dev | yarn pino-pretty\"",
     "build": "yarn build:clean && yarn build:typescript && yarn build:emails",
@@ -17,7 +17,7 @@
     "type-check": "tsc --pretty --noEmit",
     "generate-dummy-data": "ts-node --swc ./test/data-generator/new-generator.ts",
     "watch-compile": "swc src -w --out-dir dist",
-    "watch-dev": "sleep 1 && nodemon --watch \"dist/**/*\" -e js ./dist/server.js",
+    "watch-dev": "delay 1 && nodemon --watch \"dist/**/*\" -e js ./dist/server.js",
     "migrate-encryption-key": "node dist/scripts/migrate-encryption-key.js"
   },
   "dependencies": {
@@ -101,7 +101,10 @@
     "@types/sql-formatter": "^2.3.0",
     "@types/uniqid": "^5.2.0",
     "chokidar": "^3.5.3",
+    "cross-env": "^7.0.3",
+    "delay-cli": "^2.0.0",
     "jest": "^27.1.1",
+    "rimraf": "^3.0.2",
     "typescript": "4.7.4"
   },
   "optionalDependencies": {
