--- a/packages/sdk-js/package.json
+++ b/packages/sdk-js/package.json
@@ -23,7 +23,7 @@
     "directory": "packages/sdk-js"
   },
   "scripts": {
-    "build:clean": "rm -rf dist",
+    "build:clean": "rimraf -rf dist",
     "build:esm": "cross-env BABEL_ENV=esmUnbundled babel src --extensions '.ts' --out-dir 'dist/esm' --source-maps",
     "build:cjs": "cross-env BABEL_ENV=cjs babel src --extensions '.ts' --out-dir 'dist/cjs' --source-maps",
     "build:bundles": "rollup -c",
@@ -47,6 +47,7 @@
     "gzip-size-cli": "^5.0.0",
     "jest": "^27.1.1",
     "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
     "rollup": "^2.56.3",
     "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^27.0.5",
