--- a/packages/sdk-react/package.json
+++ b/packages/sdk-react/package.json
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "build:bundles": "rollup -c",
-    "build:clean": "rm -rf dist",
+    "build:clean": "rimraf -rf dist",
     "build:types": "tsc --emitDeclarationOnly",
     "build": "yarn build:clean && npm-run-all --parallel build:types build:bundles",
     "test": "jest",
@@ -53,6 +53,7 @@
     "gzip-size-cli": "^5.0.0",
     "jest": "^27.1.1",
     "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
     "rollup": "^2.56.3",
     "ts-jest": "^27.0.5",
     "typescript": "4.7.4"
