Add rootDir to tsconfig

--- a/packages/back-end/tsconfig.json
+++ b/packages/back-end/tsconfig.json
@@ -12,7 +12,8 @@
     "strictNullChecks": true,
     "strictBindCallApply": true,
     "strictPropertyInitialization": true,
-    "incremental": true
+    "incremental": true,
+    "rootDir": "src"
   },
   "include": ["src/**/*", "types/**/*.d.ts", "typings/**/*.d.ts"]
 }
