--- a/packages/back-end/tsconfig.json
+++ b/packages/back-end/tsconfig.json
@@ -16,7 +16,7 @@
     "rootDir": "src",
     "baseUrl": "./src",
     "paths": {
-      "@/types/*": ["../types/*"],
+      "@back-end/*": ["../*"],
       "@/*": ["*"]
     }
   },
