--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-typescript": "^3.5.1",
+    "eslint-plugin-growthbook-imports": "link:./packages/eslint-plugin-growthbook-imports",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.30.1",
