--- a/packages/front-end/tsconfig.json
+++ b/packages/front-end/tsconfig.json
@@ -16,7 +16,8 @@
     "incremental": true,
     "baseUrl": "./",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@/back-end/*": ["../back-end/*"]
     }
   },
   "exclude": ["node_modules"],
