--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -7,8 +7,7 @@ on:
 jobs:
   preview:
     runs-on: ubuntu-latest
-    # if: ${{ github.repository == 'growthbook/growthbook' }}
-    if: ${{ false }}  # disable for now
+    if: ${{ github.repository == 'growthbook/growthbook' }}
     steps:
     - name: Context
       uses: okteto/context@latest
