--- a/.github/workflows/preview-closed.yml
+++ b/.github/workflows/preview-closed.yml
@@ -11,7 +11,7 @@ jobs:
     - name: Context
       uses: okteto/context@latest
       with:
-        url: 'https://growthbook.okteto.dev'
+        url: ${{ secrets.OKTETO_URL }}
         token: ${{ secrets.OKTETO_TOKEN }}
 
     - name: Destroy preview environment
