proof of concept slack app: home tab, commands, presence

--- a/packages/back-end/.env.example
+++ b/packages/back-end/.env.example
@@ -23,3 +23,8 @@ SITE_MANAGER_EMAIL=
 # Required if using Google Analytics as a data source
 GOOGLE_OAUTH_CLIENT_ID=
 GOOGLE_OAUTH_CLIENT_SECRET=
+
+# Slack integration
+SLACK_APP_PORT=3200
+SLACK_BOT_OAUTH_TOKEN=
+SLACK_SIGNING_SECRET=
