--- a/packages/back-end/.env.example
+++ b/packages/back-end/.env.example
@@ -28,3 +28,6 @@ GOOGLE_OAUTH_CLIENT_SECRET=
 SLACK_APP_PORT=3200
 SLACK_BOT_OAUTH_TOKEN=
 SLACK_SIGNING_SECRET=
+SLACK_OAUTH_CLIENT_ID=
+SLACK_OAUTH_CLIENT_SECRET=
+SLACK_OAUTH_STATE_SECRET=
