--- a/packages/sdk-js/package.json
+++ b/packages/sdk-js/package.json
@@ -46,6 +46,7 @@
     "cross-env": "^7.0.3",
     "gzip-size-cli": "^5.0.0",
     "jest": "^27.1.1",
+    "jest-localstorage-mock": "^2.4.26",
     "mocksse": "^1.0.4",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
