Add scripts to generate and execute ExperimentMetricQuery SQL (#910)
* First pass as query builder

* Update experiments.json

* First draft of complete sql generation script

* Get mySQL running on local DB

* Update experiments to override correctly

* temporary env solution for keys; run all mysql

* temporary env solution for keys; run all mysql

* Add bigquery

* Build script

* Add different handling of exposures to two variants

* Add snowflake runner

* Add presto support

* Lower case snowflake

* add sqlfluff linting rules; add runtime to output; add README.md; lint file

* Fix results; update README

* Update to using local .env file

--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -16,6 +16,7 @@
     "test": "jest --forceExit --verbose --detectOpenHandles",
     "type-check": "tsc --pretty --noEmit",
     "generate-dummy-data": "ts-node --swc ./test/data-generator/new-generator.ts",
+    "test-integration-queries": "./test/integrations/integration-query-test.sh",
     "watch-compile": "swc src -w --out-dir dist",
     "watch-dev": "delay 1 && nodemon --watch \"dist/**/*\" -e js ./dist/server.js",
     "migrate-encryption-key": "node dist/scripts/migrate-encryption-key.js"
