--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -22,6 +22,7 @@
     "migrate-encryption-key": "node dist/scripts/migrate-encryption-key.js"
   },
   "dependencies": {
+    "@databricks/sql": "^1.1.0",
     "@google-cloud/bigquery": "5",
     "@google-cloud/storage": "^5.20.5",
     "@growthbook/growthbook": "^0.21.1",
