--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -95,12 +95,14 @@
     "@types/mssql": "^8.1.1",
     "@types/node": "^16.11.65",
     "@types/node-fetch": "^2.5.8",
+    "@types/node-int64": "^0.4.29",
     "@types/nodemailer": "^6.4.1",
     "@types/nunjucks": "^3.1.4",
     "@types/pg": "^7.14.4",
     "@types/request": "^2.48.3",
     "@types/request-promise": "^4.1.44",
     "@types/sql-formatter": "^2.3.0",
+    "@types/thrift": "^0.10.11",
     "@types/uniqid": "^5.2.0",
     "chokidar": "^3.5.3",
     "cross-env": "^7.0.3",
