--- a/packages/back-end/tsconfig.json
+++ b/packages/back-end/tsconfig.json
@@ -12,8 +12,7 @@
     "strictNullChecks": true,
     "strictBindCallApply": true,
     "strictPropertyInitialization": true,
-    "rootDir": "src",
-    "resolveJsonModule": true
+    "rootDir": "src"
   },
   "include": ["src/**/*", "types/**/*.d.ts", "typings/**/*.d.ts"]
 }
