New user joining existing orgs (#979)
* initial

* progress

* add member to org backend

* create pendingMembers holding tank

* auto approve controls, bug fixes

* allow json imports

* fix free-email-domains issues

* basic pending message for new user

* verified domain toggle / messaging

* email for pending/accept events

* cleanup

* Fix missing import

* unneeded React imports

* address some DRY and formatting concerns

* introduce verifiedDomain instead of calculating domain from owner email. we will use a migration script

* fix isCloud

* incorporate feedback for pending member role modal

--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -46,6 +46,7 @@
     "express-async-handler": "^1.1.4",
     "express-jwt": "^6.0.0",
     "express-rate-limit": "^6.6.0",
+    "free-email-domains-typescript": "^1.0.9",
     "googleapis": "^59.0.0",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
