--- a/.eslintrc
+++ b/.eslintrc
@@ -100,6 +100,14 @@
     },
     {
       "files": [
+        "./packages/back-end/types/openapi.d.ts"
+      ],
+      "rules": {
+        "@typescript-eslint/no-explicit-any": "off"
+      }
+    },
+    {
+      "files": [
         "./packages/docs/pages/_app.tsx",
         "./packages/front-end/components/Auth/InAppHelp.tsx",
         "./packages/front-end/components/Dimensions/DimensionChooser.tsx",
