Upgrade MongoDB driver to 4.1.0 (#2)
Upgrade MongoDB driver to 4.1.0

--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -26,6 +26,7 @@
     "@google-cloud/bigquery": "5",
     "@google-cloud/storage": "^5.20.5",
     "@growthbook/growthbook": "^0.21.1",
+    "@types/mongodb": "^4.0.7",
     "@sentry/node": "^7.14.2",
     "@slack/web-api": "^5.14.0",
     "agenda": "^5.0.0",
@@ -54,7 +55,7 @@
     "jwks-rsa": "^1.8.0",
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
-    "mongodb": "^3.7.3",
+    "mongodb": "^4.1.0",
     "mongoose": "^5.13.13",
     "mssql": "^9.0.1",
     "mysql2": "^2.3.0",
